CM Pin links on mobile; Fix mobile ui; More pin separation options

--- a/cmgm/database/styles/Edit/desktop.css
+++ b/cmgm/database/styles/Edit/desktop.css
@@ -44,7 +44,7 @@ abbr, .nounderline {text-decoration: none!important;}
 	padding: 12px;
 	margin: 0px;
 }
-.floatright {
+.floatright,.floatright-desktop {
 	float: right;
 }
 ::placeholder {
@@ -52,7 +52,7 @@ abbr, .nounderline {text-decoration: none!important;}
 }
 
 /* Left Side Menu*/
-.cellsite_type_label, .tags_label, .id_params_label, .lte_nr_label, .addr_label, .latitude_longitude_label, .pci_label, .sv_label {
+.cellsite_type_label, .tags_label, .id_params_label, .lte_nr_label, .addr_label, .latitude_longitude_label, .pci_label, .sv_label, .misc_label {
 	max-width: 16%; width: 100%;
 }
 
@@ -79,7 +79,7 @@ abbr, .nounderline {text-decoration: none!important;}
 	width: 22%!important;
 }
 
-.pad-small-link {padding-left: 3px; padding-right: 3px; text-align: right; font-size: 1.07em; }
+.pad-small-link {padding-left: 3px; padding-right: 3px; text-align: right; font-size: 1.07em; display:inline}
 
 /* WIDGET AND NO TEXT DECORAITON!!! */
 .widget {
